# RangerAI

./: .dockerignore  .env.example  .gitignore  .woodpecker.yaml  AGENT.md  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
assets/fixtures/envelopes/: longitudinal_company_01.json  mountain_phase_amb_01.json
assets/fixtures/evals/: longitudinal_company_01_expected.json
docker/: compose.dev.yaml
docs/: architecture.md  doctrine-rag-weather-terrain.md  frontend-integration.md  implementation.md  shared-data-contract.md
k8s/staging/: deployment.yaml
src/: __init__.py  config.py  contracts.py
src/agent/: cache.py  calibration.py  dashboard.py  decision_science.py  doctrine.py  entities.py  environment.py  evaluation.py  graph.py  interventions.py  ledger.py  locators.py  metrics.py  models.py  policy.py  reasoning.py  store.py  vector_store.py  workflow.py
src/api/: main.py
src/ingest/: __init__.py  providers.py  scrub.py
src/kg/: client.py
src/spire/: __init__.py
src/spire/agents/: __init__.py  models.py
tests/: test_api_integration.py  test_cache.py  test_calibration.py  test_config.py  test_contracts.py  test_environment.py  test_evaluation.py  test_health.py  test_interventions.py  test_kg_client.py  test_longitudinal_synthetic.py  test_policy.py  test_providers.py  test_store.py  test_vector_store.py  test_workflow.py
tools/: check_infra.py  open_falkordb_browser.py  post_demo_ingest.py  run_api.py  smoke_longitudinal_synthetic.py  smoke_synthetic.py
