[project]
name = "c2d2-avai"
version = "0.1.0"
description = "Deployable API for the Ranger School adversarial training agent."
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.45.0",
    "openai>=1.59.0",
    "instructor==1.7.0",
    "langgraph==1.1.0",
    "deepgram-sdk==4.1.0",
    "mistralai==1.5.0",
    "falkordb==1.2.0",
    "redis==5.2.0",
    "pydantic==2.10.4",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "langfuse==2.60.0",
    "websockets==14.1",
    "tenacity==9.0.0",
    "psycopg[binary]==3.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
cache-dir = ".uv-cache"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: tests that require live provider credentials and network access",
]
